# CrisisBench

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  comms_location_review.json  config-openai.json  pyproject.toml  runner_config.json
_bmad-output/brainstorming/: brainstorming-session-2026-02-21.md  brainstorming-session-2026-02-28.md  remaining-brainstorm-plan.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-quality-gates.md  1-2-scenario-data-models.md  1-3-runtime-data-models.md  1-4-scoring-data-models.md  2-1-personschedule-generation-framework.md  2-2-health-location-module-generators.md  2-3-weather-calendar-financial-module-generators.md  2-4-communications-module-generator.md  2-5-crisis-injector-scenario-packaging.md  2-6-memory-bootstrapping-example-scenario.md  3-1-orchestrator-shell-scenario-loading.md  3-2-system-prompt-builder-model-client.md  3-3-toolrouter-scenariodatahandler-memoryhandler.md  3-4-multi-turn-tool-loop-action-log.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-25.md
references/: AGENTS.MD  IDENTITY.md  MEMORY.md  SOUL.md  USER.md  system_prompt.py
scenarios/cardiac_arrest_T4_s42/: heartbeats.json  manifest.json  persona.md  scenario.json  tools.json
src/crisis_bench/: __init__.py  cli.py  prompt.py
tests/: conftest.py  test_prompt.py
tests/generator/: test_determinism.py  test_generate.py  test_schedule.py
tests/runner/: test_action_log.py  test_model_client.py  test_orchestrator.py  test_run.py  (+3 more)
(+41 files in other folders)
