[project]
name = "crisis-bench"
version = "0.1.0"
description = "Benchmark measuring whether LLM agents detect life-threatening emergencies buried in routine, noisy data streams"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Mauk Muller" }]

dependencies = [
    "click>=8.1",
    "instructor>=1.0",
    "litellm>=1.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.scripts]
crisis-bench = "crisis_bench.cli:main"

[dependency-groups]
dev = [
    "codespell>=2.0",
    "mypy>=1.0",
    "pip-audit>=2.0",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crisis_bench"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unreachable = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
